@@ -50,7 +50,9 @@ bool Box_Data_List_Find::fill_from_database()
 {
   Bakery::BusyCursor busy_cursor(get_app_window());
 
-  bool result = Box_DB_Table::fill_from_database();
+  const bool result = Box_DB_Table::fill_from_database();
+  if(!result)
+    return false;
 
   //Field Names:
   create_layout();
